# common

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  meson.build
include/: meson.build
include/chk/common/: common.h  common.hpp  error.hpp  format.h  function.hpp  list.hpp  logging.h  logging.hpp  memory.hpp  ptr.hpp  source_loc.hpp  status_code.h  string.hpp  types.h  types.hpp  visibility.h
src/: meson.build
src/chk/common/: format.c  logging.c
src/common/: common.cpp  logging.cpp
src/common_test/: main.cpp
